--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --inline --port 8081",
-    "pro": "cross-env NODE_ENV=production webpack"
+    "pro": "cross-env NODE_ENV=production webpack",
+    "buildES5": "gulp buildES5"
   },
   "keywords": [
     "picker",
@@ -24,8 +25,14 @@
     "cross-env": "^3.1.3",
     "css-loader": "^0.28.0",
     "file-loader": "^0.11.2",
+    "gulp": "^3.9.1",
+    "gulp-cssmin": "^0.2.0",
+    "gulp-less": "^3.3.2",
+    "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^3.0.0",
     "less": "^2.7.2",
     "less-loader": "^4.0.3",
+    "less-plugin-autoprefix": "^1.5.1",
     "open-browser-webpack-plugin": "0.0.2",
     "postcss-import": "^10.0.0",
     "postcss-loader": "^2.0.6",
